# teia_conhecimento

./: .gitignore  README.md  main.py  mkdocs.yml  paths.py  pyproject.toml  requirements.txt  ruff.toml  tailwind.config.js
app/: api.py
app/controllers/: api.py
app/controllers/api/v1/: root.py
app/infra/: compose.yaml  database.py
app/services/: ask_service.py
app/views/static/css/: output.css  style.css
app/views/templates/: ask.html  landing_page.html  under_construction.html
notbooks/: langchain_quickstart.ipynb
src/tarot/: oraculo.py
src/tarot/baralhos/: baralho_madeiras_mata_atlantica.json  baralho_passaros_mata_atlantica.json
tests/: test_api.py
