[tool.poetry]
name = "teia-conhecimento"
version = "0.1.0"
description = ""
authors = ["Gustavo Mescoki Sarti <gmsarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
fastapi-socketio = "^0.0.10"
black = "^24.4.2"
editorconfig = "^0.12.4"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
